assert-struct/tests/snapshots/tuples__tuple_mixed_patterns.snap
---
source: assert-struct/tests/tuples.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/tuples_errors/mixed_patterns.rs:20:20
   |
20 |             pair: (> 100, "other"),  // Comparison fails, string fails
   |                    ^^^^^  ^^^^^^^ got "test"
   |                    |
   |                    got 75
